--- a/index.html
+++ b/index.html
@@ -24,15 +24,38 @@
 
         <li>
             <p class="question">What's the different between "restting" and "normalizing"</p>
-            <p class="answer">"Restting" is meant to strip all default browser styling on element, e.g. <code>margin</code>, <code>padding</code>, <code>font-size</code></p>
+            <p class="answer">"Restting" is meant to strip all default browser styling on element, e.g. <code>margin</code>, <code>padding</code>, <code>font-size</code>. "Normalizing" preserves usefaul default styles rather than "unstyling" everything. It also corrects bugs for common browser dependencies. </p>
         </li>
         <li>
-            <p class="question"></p>
-            <p class="answer"></p>
+            <p class="question">CSS Box model</p>
+            <p class="answer">content + <code>border</code> + <code>padding</code> + <code>margin</code></p>
         </li>
         <li>
-            <p class="question"></p>
-            <p class="answer"></p>
+            <p class="question">what is <code>line-height</code>?</p>
+            <p class="answer"><code>line-height</code> is the height of a single line of document.</p>
+        </li>
+        <li>
+            <p class="question">how to make chrome support font size smaller than 12px?</p>
+            <p class="answer"><code>p{font-size:10px; -webkit-transform:scale(0.8);}</code></p>
+        </li>
+        <li>
+            <p class="question">有一个高度自适应的div，里面有两个div，一个高度100px，希望另一个填满剩下的高度</p>
+            <p class="answer">外层div使用position：relative；高度要求自适应的div使用position: absolute; top: 100px; bottom: 0; left: 0</p>
+        </li>
+        <li>
+            <p class="question">some special html tag</p>
+            <p class="answer"><b>b</b>, <i>i</i>, <u>u</u>, <s>s</s>, <sup>sup</sup>, <sub>sub</sub></p>
+        </li>
+        <li>
+            <p class="question">someway to hide element</p>
+            <p class="answer">(1) <code>display:none</code> (2) <code>opacity:0</code> (3) <code>visibility:hidden</code> (4) <code>position:absolute; left:-100000px;</code></p>
+        </li>
+        <li>
+            <p class="question">draw a 1px line without using <code>border</code></p>
+            <div id="q9"></div>
+            <p class="answer"><code>height: 1px;
+                                    background-color: red;
+                                    overflow: hidden;</code></p>
         </li>
         <li>
             <p class="question"></p>
